--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">swapg</string>
+    <string name="home_tab_newtest">最新</string>
+    <string name="home_tab">ランダム</string>
+    <string name="home_tab_ranking">ランキング</string>
 </resources>
